# AsyncAPI

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
etl/: Dockerfile  __init__.py  _elastic_index.py  config.py  entrypoint.sh  main.py  models.py  requirements.txt  state.py
etl/etl_modules/: extract.py  load.py  transform.py
etl/logs/: logger.py
etl/queries_schemas/: sql.py
etl/sqlite_to_postgres/: load_data.py
etl/sqlite_to_postgres/tests/: conftest.py
etl/utils/: back_off.py  connectors.py
nginx/: nginx.conf
nginx/configs/: site.conf
sql/: script.sql
src/: Dockerfile  requirements.txt
src/api/v1/: films.py  genres.py  persons.py
src/core/: cache.py  config.py  elastic.py  logger.py
src/db/: elastic.py  redis.py
src/models/: base.py  films.py  persons.py
src/services/: annotations.py  film.py  genre.py  main.py  person.py
src/services/repositories/: base.py  elastic.py  redis.py
src/services/repositories/utils/: elastic_query_builder.py  key_builder.py  redis_formatter.py
tests/: Dockerfile  docker-compose.yml
tests/functional/: conftest.py  requirements.txt  settings.py
tests/functional/fixtures/: clients.py  http.py
tests/functional/src/: test_films.py  test_genres.py  test_persons.py
tests/functional/testdata/: elastic_data.py  elastic_index.py
tests/functional/utils/: wait_for_es.py  wait_for_redis.py
tests/functional/utils/loaders/: base.py  elastic_loader.py  logger.py  redis.py
