[tool.poetry]
name = "async-movies"
version = "0.1.0"
description = ""
authors = ["a.cheremushkin <a.ch3re359@yandex.ru>"]
readme = "README.md"
packages = [
    { include = "api", from = 'src'},
    { include = "core", from = 'src' },
    { include = "db", from = 'src' },
    { include = "models", from = 'src' },
    { include = "services", from = 'src' },
]

[tool.poetry.dependencies]
python = "^3.10"
redis = "^5.0.0"
elasticsearch-async = "^6.2.0"
fastapi = "0.61.1"
uvicorn = "^0.23.2"
orjson = "^3.9.7"
python-dotenv = "^1.0.0"
pytest = "^7.4.2"

[tool.poetry.group.dev.dependencies]
pyproject-flake8 = "^6.0.0.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.flake8]
exclude = [
    'load_data.py',
    'sql.py'
]
max-line-length = 99
